# fantabrain-llm

./: .gitignore  README.md  pyproject.toml
benchmarks/: pagella_v0.jsonl
configs/sft/: llama31-8b-qlora.yaml  qwen25-3b-qlora-v0.yaml  qwen25-3b-qlora-v1.yaml  qwen25-3b-qlora-v2.yaml  qwen25-3b-qlora-v3.yaml  qwen25-3b-qlora-v4.yaml  qwen25-3b-qlora-v5.yaml
datasets/v0/: train.jsonl
datasets/v1/: README.md  manifest.yaml
datasets/v2/: README.md  manifest.yaml
datasets/v3/: README.md  manifest.yaml
datasets/v4/: README.md  manifest.yaml
datasets/v5/: README.md  manifest.yaml
docs/runbooks/: gpu-baseline-v0.md  (+7 more)
notebooks/: README.md
scripts/: assemble_dataset_v2.py  assemble_dataset_v3.py  assemble_dataset_v4.py  assemble_dataset_v5.py  audit_predictions.py  audit_v0.py  create_scores_template.py  filter_predictions.py  generate_predictions.py  inspect_chat_template.py  merge_adapter.py  prepare_dataset.py  run_eval.py  run_fallback_eval.py  score_predictions.py  train_lora.py
tests/: test_assemble_dataset_v2.py  test_assemble_dataset_v3.py  test_assemble_dataset_v4.py  test_assemble_dataset_v5.py  test_dataset.py  test_dataset_v1_manifest.py  test_dataset_v2_manifest.py  test_dataset_v3_manifest.py  test_dataset_v4_manifest.py  test_fallback_eval.py  test_filter_predictions_cli.py  test_generate_predictions_cli.py  test_inference.py  test_openai_fallback.py  test_output_filter.py  test_prediction_audit.py  test_predictions.py  test_prompt_guards.py  test_run_fallback_eval_cli.py  test_scoring.py  test_training_configs.py  test_v0_audit.py
(+34 files in other folders)
