[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantabrain-llm"
version = "0.1.0"
description = "Training and evaluation palestra for the FantaBrain AI coach."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
train = [
  "accelerate>=1.0.0",
  "datasets>=3.0.0",
  "peft>=0.13.0",
  "torch>=2.4.0",
  "transformers>=4.45.0",
  "trl>=0.20.0",
  "bitsandbytes>=0.43.0; platform_system != 'Windows'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest-tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
